Salesforce/src/objects/vinay_kumar__c.object
<CustomObject>
    <fields>
        <fullName>CB1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CB1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Relation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Relation</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>vinays</relationshipLabel>
        <relationshipName>vinays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmployeeVinay__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>vinays</relationshipLabel>
        <relationshipName>vinays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestMatching_Rule__c</fullName>
        <formula>IF(CB1__c,&apos;true&apos;,&apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestMatching Rule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vinay_Account__c</fullName>
        <label>Vinay Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>vinays</relationshipLabel>
        <relationshipName>vinays</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>vinay kumar</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>vinay kumar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vinays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>